--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/node": "^22.7.5",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
+		"@types/socket.io": "^3.0.2",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"cypress": "^13.15.1",
 		"eslint": "^9.9.0",
